Corrections following reviewer's comments: - PreContingencyResult constructor requires Collections, not Maps - Correct SecurityAnalysisResult deserializer and test files - Optimize monitor merging in StateMonitorIndex - Add ID-based getters in PreContingencyResult - Delete redundant methods in SecurityAnalysisResult - If a monitored ID does not exist, ignore it - Add tests
Signed-off-by: RALAMBOTIANA MIORA <miora.ralambotiana@rte-france.com>